2005-06-23  Richard Hoelscher  <rah@rahga.com>

	* games-preimage.c (games_preimage_new_from_file): Ensure that the
	pixbuf loader is closed prior to setting our rendering path. 

2005-06-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-network-dialog.c: Massive UI reorganisation. The
	preferences have now been folded into the main window. As a
	side-effect this fixes the bug where you had to visit the
	preferences window before "Connect" would do anything. The status
	text box has been reduced to a single line that indicates what we
	are trying to do right now. Errors should appear as dialogs (I
	haven't fixed everything coming from the non-GUI side yet). Don't
	mistake this for the last word in GUI design either - it is merely
	better, not good.

2005-05-31  Richard Hoelscher  <rah@rahga.com>

	* games-stock.c (games_stock_prepare_for_statusbar_tooltips) 
	(connect_proxy, unset_statusbar_tooltip, set_statusbar_tooltip):
	Imported a few functions that handle menu tooltips and statusbars.

2005-05-28  Richard Hoelscher  <rah@rahga.com>

	* games-stock.c (games_stock_copy_tooltip_from_stockid):
	Takes a stockid, and sends back a copy of a nice tooltip string.

2005-05-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-scores-dialog.gob: Split the button setting routine out
	from the initialiser and give it its own function. This results in
	nicer code.
	Oops: make _set_message handle NULL strings properly.

2005-05-24  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-scores-dialog.gob: Add a message area to the dialog. Use
	games_scores_dialog_set_message. Also add an extra option to _new
	to set the button types.

2005-05-04  Richard Hoelscher  <rah@rahga.com>

	* games-card-pixmaps.c (games_card_pixmaps_get_red_joker): 
	Specify the correct card. This only affected Aisleriot Thieves.

2005-04-24  Callum McKenzie  <callum@physics.otago.ac.nz>

	* games-scores-dialog.gob: Handle the case when no categories are