@@ -4,12 +4,12 @@
 
 /* Games Scores Dialog - Display high scores
  *
- * Copyright (c) 2004 by Callum McKenzie
+ * Copyright (c) 2004, 2005 by Callum McKenzie
  *
  */
 
 
-#line 22 "games-scores-dialog.gob"
+#line 36 "games-scores-dialog.gob"
 #line 14 "games-scores-dialog-private.h"
 #ifndef __GAMES_SCORES_DIALOG_PRIVATE_H__
 #define __GAMES_SCORES_DIALOG_PRIVATE_H__
@@ -24,36 +24,36 @@ extern "C" {
 
 #include <gtk/gtk.h>
 
-#line 31 "games-scores-dialog.gob"
+#line 45 "games-scores-dialog.gob"
 #line 29 "games-scores-dialog-private.h"
 struct _GamesScoresDialogPrivate {
-#line 48 "games-scores-dialog.gob"
+#line 62 "games-scores-dialog.gob"
 	GtkWidget * message;
-#line 49 "games-scores-dialog.gob"
-	GtkWidget * hdiv;
-#line 50 "games-scores-dialog.gob"
-	GtkWidget * combo;
-#line 51 "games-scores-dialog.gob"
-	GtkWidget * label;
-#line 52 "games-scores-dialog.gob"
-	GtkWidget * catbar;
-#line 53 "games-scores-dialog.gob"
-	GtkListStore * list;
-#line 54 "games-scores-dialog.gob"
-	GtkTreeView * treeview;
-#line 55 "games-scores-dialog.gob"
-	GtkTreeViewColumn * column;
-#line 56 "games-scores-dialog.gob"
-	gchar * domain;
-#line 57 "games-scores-dialog.gob"
-	GHashTable * categories;
-#line 58 "games-scores-dialog.gob"
-	GHashTable * catindices;
-#line 59 "games-scores-dialog.gob"
-	gint catcounter;
-#line 60 "games-scores-dialog.gob"
-	gint hilight;
 #line 63 "games-scores-dialog.gob"
+	GtkWidget * hdiv;
+#line 64 "games-scores-dialog.gob"
+	GtkWidget * combo;
+#line 65 "games-scores-dialog.gob"
+	GtkWidget * label;
+#line 66 "games-scores-dialog.gob"
+	GtkWidget * catbar;
+#line 67 "games-scores-dialog.gob"
+	GtkListStore * list;
+#line 68 "games-scores-dialog.gob"
+	GtkTreeView * treeview;
+#line 69 "games-scores-dialog.gob"
+	GtkTreeViewColumn * column;
+#line 70 "games-scores-dialog.gob"
+	gchar * domain;
+#line 71 "games-scores-dialog.gob"
+	GHashTable * categories;
+#line 72 "games-scores-dialog.gob"
+	GHashTable * catindices;
+#line 73 "games-scores-dialog.gob"
+	gint catcounter;
+#line 74 "games-scores-dialog.gob"
+	gint hilight;
+#line 77 "games-scores-dialog.gob"
 	gint style;
 #line 59 "games-scores-dialog-private.h"
 };
