@@ -1,14 +1,14 @@
-/* Generated by GOB (v2.0.11) on Wed May 25 17:53:01 2005
+/* Generated by GOB (v2.0.11) on Fri Jun 17 19:22:36 2005
    (do not edit directly) */
 
 /* End world hunger, donate to the World Food Programme, http://www.wfp.org */
 
 
-#line 22 "games-scores-dialog.gob"
+#line 36 "games-scores-dialog.gob"
 
 /* Games Scores Dialog - Display high scores
  *
- * Copyright (c) 2004 by Callum McKenzie
+ * Copyright (c) 2004, 2005 by Callum McKenzie
  *
  */
 
@@ -34,13 +34,13 @@
 #define ___GOB_UNLIKELY(expr) (expr)
 #endif /* G_LIKELY */
 
-#line 31 "games-scores-dialog.gob"
+#line 45 "games-scores-dialog.gob"
 
 #include <gtk/gtk.h>
 
 #line 42 "games-scores-dialog.c"
 
-#line 35 "games-scores-dialog.gob"
+#line 49 "games-scores-dialog.gob"
 
 
 #include <config.h>
@@ -140,13 +140,13 @@ ___finalize(GObject *obj_self)
 	gpointer priv G_GNUC_UNUSED = self->_priv;
 	if(G_OBJECT_CLASS(parent_class)->finalize) \
 		(* G_OBJECT_CLASS(parent_class)->finalize)(obj_self);
-#line 56 "games-scores-dialog.gob"
+#line 70 "games-scores-dialog.gob"
 	if(self->_priv->domain) { g_free ((gpointer) self->_priv->domain); self->_priv->domain = NULL; }
 #line 146 "games-scores-dialog.c"
-#line 57 "games-scores-dialog.gob"
+#line 71 "games-scores-dialog.gob"
 	if(self->_priv->categories) { g_hash_table_destroy ((gpointer) self->_priv->categories); self->_priv->categories = NULL; }
 #line 149 "games-scores-dialog.c"
-#line 58 "games-scores-dialog.gob"
+#line 72 "games-scores-dialog.gob"
 	if(self->_priv->catindices) { g_hash_table_destroy ((gpointer) self->_priv->catindices); self->_priv->catindices = NULL; }
 #line 152 "games-scores-dialog.c"
 }
@@ -165,7 +165,7 @@ games_scores_dialog_class_init (GamesScoresDialogClass * c G_GNUC_UNUSED)
 	g_object_class->finalize = ___finalize;
 }
 #undef __GOB_FUNCTION__
-#line 182 "games-scores-dialog.gob"
+#line 196 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_init (GamesScoresDialog * self G_GNUC_UNUSED)
 #line 172 "games-scores-dialog.c"
@@ -173,7 +173,7 @@ games_scores_dialog_init (GamesScoresDialog * self G_GNUC_UNUSED)
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::init"
 	self->_priv = G_TYPE_INSTANCE_GET_PRIVATE(self,TYPE_SELF,GamesScoresDialogPrivate);
  {
-#line 182 "games-scores-dialog.gob"
+#line 196 "games-scores-dialog.gob"
 
     GtkWidget *vbox;
     GtkWidget *scroll;
@@ -289,14 +289,14 @@ games_scores_dialog_init (GamesScoresDialog * self G_GNUC_UNUSED)
  * Returns: a new widget
  *
  **/
-#line 76 "games-scores-dialog.gob"
+#line 90 "games-scores-dialog.gob"
 GtkWidget * 
 games_scores_dialog_new (const gchar * domain, const gchar * title)
 #line 296 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::new"
 {
-#line 76 "games-scores-dialog.gob"
+#line 90 "games-scores-dialog.gob"
 	
     GamesScoresDialog *dialog = GET_NEW;
 
@@ -309,14 +309,14 @@ games_scores_dialog_new (const gchar * domain, const gchar * title)
 #line 310 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
-#line 86 "games-scores-dialog.gob"
+#line 100 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_set_hilight_private (GamesScoresDialog * self)
 #line 316 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_hilight_private"
 {
-#line 87 "games-scores-dialog.gob"
+#line 101 "games-scores-dialog.gob"
 	
     GtkTreePath *path;
     GtkTreeSelection *selection;
@@ -332,14 +332,14 @@ games_scores_dialog_set_hilight_private (GamesScoresDialog * self)
 #line 333 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
-#line 100 "games-scores-dialog.gob"
+#line 114 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_redraw (GamesScoresDialog * self)
 #line 339 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::redraw"
 {
-#line 101 "games-scores-dialog.gob"
+#line 115 "games-scores-dialog.gob"
 	
     gint i,n;
     GtkTreeIter iter;
@@ -403,14 +403,14 @@ games_scores_dialog_redraw (GamesScoresDialog * self)
 #line 404 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
-#line 162 "games-scores-dialog.gob"
+#line 176 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_change_category (GtkComboBox * widget, GamesScoresDialog * self)
 #line 410 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::change_category"
 {
-#line 163 "games-scores-dialog.gob"
+#line 177 "games-scores-dialog.gob"
 	
     self->_priv->hilight = 0;
     games_scores_dialog_redraw (self);
@@ -418,28 +418,28 @@ games_scores_dialog_change_category (GtkComboBox * widget, GamesScoresDialog * s
 #line 419 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
-#line 172 "games-scores-dialog.gob"
+#line 186 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_show (GamesScoresDialog * self)
 #line 425 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::show"
 {
-#line 173 "games-scores-dialog.gob"
+#line 187 "games-scores-dialog.gob"
 	 
     games_scores_dialog_redraw (self);
   }}
 #line 433 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
-#line 177 "games-scores-dialog.gob"
+#line 191 "games-scores-dialog.gob"
 static void 
 games_scores_dialog_hide (GamesScoresDialog * self)
 #line 439 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::hide"
 {
-#line 178 "games-scores-dialog.gob"
+#line 192 "games-scores-dialog.gob"
 	
     self->_priv->hilight = 0;
   }}
@@ -457,14 +457,14 @@ games_scores_dialog_hide (GamesScoresDialog * self)
  * Adds a new category to combo box selector.
  *
  **/
-#line 291 "games-scores-dialog.gob"
+#line 305 "games-scores-dialog.gob"
 void 
 games_scores_dialog_add_category (GamesScoresDialog * self, const gchar * key, const gchar * name)
 #line 464 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::add_category"
 {
-#line 293 "games-scores-dialog.gob"
+#line 307 "games-scores-dialog.gob"
 	
     gchar *k;
 
@@ -492,14 +492,14 @@ games_scores_dialog_add_category (GamesScoresDialog * self, const gchar * key, c
  * is at this layer.
  *
  **/
-#line 315 "games-scores-dialog.gob"
+#line 329 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_category (GamesScoresDialog * self, const gchar * key)
 #line 499 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_category"
 {
-#line 315 "games-scores-dialog.gob"
+#line 329 "games-scores-dialog.gob"
 	
     gint index;
 
@@ -510,14 +510,14 @@ games_scores_dialog_set_category (GamesScoresDialog * self, const gchar * key)
 #line 511 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
-#line 334 "games-scores-dialog.gob"
+#line 348 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_style (GamesScoresDialog * self, GamesScoresStyle style)
 #line 517 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_style"
 {
-#line 334 "games-scores-dialog.gob"
+#line 348 "games-scores-dialog.gob"
 	
     gchar *header;
 
@@ -548,14 +548,14 @@ games_scores_dialog_set_style (GamesScoresDialog * self, GamesScoresStyle style)
  * to the player where the game they just played is.
  *
  **/
-#line 361 "games-scores-dialog.gob"
+#line 375 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_category_description (GamesScoresDialog * self, const gchar * description)
 #line 555 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_category_description"
 {
-#line 362 "games-scores-dialog.gob"
+#line 376 "games-scores-dialog.gob"
 	
     gchar *lstr;
 
@@ -567,14 +567,14 @@ games_scores_dialog_set_category_description (GamesScoresDialog * self, const gc
 #line 568 "games-scores-dialog.c"
 #undef __GOB_FUNCTION__
 
-#line 381 "games-scores-dialog.gob"
+#line 395 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_hilight (GamesScoresDialog * self, guint pos)
 #line 574 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_hilight"
 {
-#line 382 "games-scores-dialog.gob"
+#line 396 "games-scores-dialog.gob"
 	
     /* We silently exit here since 0 is an explicit indication that we don't 
      * have a place in mind while greater than 10 is legitimate, but we
@@ -596,14 +596,14 @@ games_scores_dialog_set_hilight (GamesScoresDialog * self, guint pos)
  * Sets the message at the top of the dialog. Pango markup is understood.
  *
  **/
-#line 401 "games-scores-dialog.gob"
+#line 415 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_message (GamesScoresDialog * self, const gchar * message)
 #line 603 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_message"
 {
-#line 401 "games-scores-dialog.gob"
+#line 415 "games-scores-dialog.gob"
 	
     if ((message == NULL) || (*message == '\0')) {
       gtk_widget_hide (self->_priv->message);
@@ -625,14 +625,14 @@ games_scores_dialog_set_message (GamesScoresDialog * self, const gchar * message
  * Changes the button sets at the buttom of the dialog
  *
  **/
-#line 420 "games-scores-dialog.gob"
+#line 434 "games-scores-dialog.gob"
 void 
 games_scores_dialog_set_buttons (GamesScoresDialog * self, guint buttons)
 #line 632 "games-scores-dialog.c"
 {
 #define __GOB_FUNCTION__ "Games:Scores:Dialog::set_buttons"
 {
-#line 420 "games-scores-dialog.gob"
+#line 434 "games-scores-dialog.gob"
 	
     /* Remove an existing buttons. */
     gtk_container_foreach (GTK_CONTAINER (GTK_DIALOG (self)->action_area),
