@@ -1,14 +1,28 @@
+/* games-files.c
+   Copyright 2004, 2005 Callum McKenzie
 
+   This library is free software; you can redistribute it and'or modify
+   it under the terms of the GNU Library General Public License as published
+   by the Free Software Foundation; either version 2, or (at your option)
+   any later version.
+
+   This library is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU Library General Public License for more details.
+
+   You should have received a copy of the GNU Library General Public License
+   along with this library; if not, write to the Free Software
+   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.  */
+
+/* Authors:   Callum McKenzie <callum@physics.otago.ac.nz> */
 
 requires 2.0.0
 
 /* FIXME: This enum should be documented. */
 
 %h{
-  typedef enum {
-    GAMES_SCORES_STYLE_PLAIN,
-    GAMES_SCORES_STYLE_TIME,
-  } GamesScoresStyle;
+  #include "games-scores.h" /* For GamesScoresStyle. */
 
   typedef enum {
     GAMES_SCORES_CLOSE_BUTTON = 1,
@@ -22,7 +36,7 @@ requires 2.0.0
 %alltop{
 /* Games Scores Dialog - Display high scores
  *
- * Copyright (c) 2004 by Callum McKenzie
+ * Copyright (c) 2004, 2005 by Callum McKenzie
  *
  */
 
