@@ -1,3 +1,12 @@
+2005-06-28  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* games-network.c (games_host_lan_game): Patch from Sven Herzberg
+	to replace snprintf with g_strdup_printf.
+
+2005-06-17  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* games-scores-dialog.gob: Added the GPL at the top of the file.
+
 2005-06-23  Richard Hoelscher  <rah@rahga.com>
 
 	* games-preimage.c (games_preimage_new_from_file): Ensure that the
